<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">DanmakuDesigner</string>
	
	<string name="dlg_ncp_name">名称:</string>
	<string name="dlg_ncp_pos">位置:</string>
	<string name="dlg_ncp_dir">发射角度范围:</string>
	<string name="dlg_ncp_count">单批发射子弹数:</string>
	<string name="dlg_ncp_cycle">发射间隔:</string>
	
	<string name="dig_cpm_route_self">发射器路径:</string>
	<string name="dlg_cpm_route">子弹路径:</string>
	<string name="dlg_cpm_veloc">子弹速度:</string>
	<string name="dlg_cpm_veloc_self">发射器速度:</string>
	<string name="dlg_cpm_veloc_unit">(90/秒)</string>
	<string name="dlg_cpm_time_begin">开始时间(tick):</string>
	<string name="dlg_cpm_time_end">结束时间(tick):</string>
	<string name="dlg_cpm_rotate">发射器旋转:(度每秒)</string>
	<string name="dlg_cpm_task_title">事件系统:</string>
	
	<string name="delete">删除</string>
	<string name="add">增加</string>
	
	<string-array name="spin_route">
		<item>曲线</item>
		<item>直线</item>
	</string-array>
	
	<string-array name="task_type">
	    <item>激活状态</item>
	    <item>自转速度</item>
	    <item>子弹速度</item>
	    <item>发射间隔</item>
	    <item>单批数量</item>
	    <item>范围大小</item>
	    <item>范围中值</item>
	    <item>子弹变向</item>
	</string-array>
	
	<string name="task_hint_timeout">首次时间</string>
	<string name="task_hint_interval">间隔(-1不反复)</string>
	<string name="task_hint_target">目标值</string>
	<string name="task_hint_time">变化时间</string>

</resources>
