<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
	    
	    <Spinner
	        android:id="@+id/task_type_spinner"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:entries="@array/task_type"
	        android:layout_weight="1" />

	    <cn.BHR.danmakudesigner.ui.ExtendedEditText
	        android:id="@+id/task_edit_target"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/task_hint_target" />
	    
	    <cn.BHR.danmakudesigner.ui.ExtendedEditText
	        android:id="@+id/task_edit_time"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/task_hint_time" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >
        	
	    <cn.BHR.danmakudesigner.ui.ExtendedEditText
	        android:id="@+id/task_edit_timeout"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/task_hint_timeout" />
	    
	    <cn.BHR.danmakudesigner.ui.ExtendedEditText
	        android:id="@+id/task_edit_interval"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/task_hint_interval" />

	    <ImageButton
	        android:id="@+id/task_btn_delete"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:contentDescription="@string/delete"
	        android:src="@android:drawable/ic_menu_close_clear_cancel" />
	    
    </LinearLayout>
</LinearLayout>
