<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="16dp">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_cpm_time_begin"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/dlgcpmtimebegin"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_cpm_time_end"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
			android:layout_height="wrap_content"
			android:inputType="number"
			android:ems="10"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/dlgcpmtimeend"/>

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_cpm_veloc"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
			android:layout_height="wrap_content"
			android:inputType="numberDecimal"
			android:ems="10"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/dlgcpmveloc"/>

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_cpm_veloc_unit"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

	</LinearLayout>
	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_cpm_rotate"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
			android:layout_height="wrap_content"
			android:inputType="numberDecimal|numberSigned"
			android:ems="10"
			android:layout_width="0dp"
			android:layout_weight="1.0"
			android:id="@+id/dlgcpmrotate"/>

	</LinearLayout>

</LinearLayout>

