<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="16dp">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_ncp_name"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputname"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="text" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_ncp_pos"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputposx"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="numberDecimal|numberSigned" />

		<TextView
			android:layout_height="wrap_content"
			android:text=","
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputposy"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="numberDecimal|numberSigned" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_ncp_dir"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputmiddir"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="text" />

		<TextView
			android:layout_height="wrap_content"
			android:text="±"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputdirrange"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="text" />

	</LinearLayout>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_ncp_count"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputcount"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="number" />

	</LinearLayout>
	
		<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<TextView
			android:layout_height="wrap_content"
			android:text="@string/dlg_ncp_cycle"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_width="wrap_content"
			android:layout_gravity="center_vertical"/>

		<EditText
		    android:id="@+id/dlgncpinputcycle"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="1.0"
		    android:ems="10"
		    android:inputType="number" />

	</LinearLayout>

</LinearLayout>

